# pail

./: .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  Rocket.toml.example  go.mod  go.sum  main.go  next.config.js  package.json  pnpm-lock.yaml  railway.toml  readme.md  tailwind.config.js  tsconfig.json  types.d.ts
.github/workflows/: build.yml  nextjs.yml
cypress/: .gitignore
cypress/e2e/: app.cy.ts
database/: database.go  schema.go
docs/: next.config.js  package.json  postcss.config.js  theme.config.jsx
docs/pages/: index.mdx  setup.mdx
lib/: Middleware.ts  prismadb.ts
migrations/2022-11-13-214227_next_auth/: down.sql  up.sql
migrations/2022-11-14-231501_change_timestamp_format/: down.sql  up.sql
migrations/2022-11-16-183845_remove_auth/: down.sql  up.sql
migrations/2022-11-21-045540_add_teams_table/: up.sql
migrations/2022-11-22-005754_change_id_type/: down.sql  up.sql
migrations/2022-11-22-194344_setup_users/: up.sql
migrations/2022-11-22-194658_setup_teams/: up.sql
migrations/2022-11-24-224221_team_invites/: down.sql  up.sql
migrations/2022-11-26-013926_modify_fields/: down.sql  up.sql
migrations/2022-11-26-034525_team_id_serial/: down.sql  up.sql
migrations/2022-11-26-040943_team_members/: down.sql  up.sql
migrations/2022-11-26-064535_add_admin_field/: down.sql  up.sql
prisma/: schema.prisma
public/: bucket.json
routes/: routes.go
routes/api/: api.go
src/: database.rs  main.rs  middleware.ts  models.rs  schema.rs
src/app/: layout.tsx  loading.tsx  page.tsx
src/components/: BarGraph.tsx  Bucket.tsx  Button.tsx  ChallengeContainer.tsx  Code.tsx  CreateChallenge.tsx  CreateHost.tsx  Dialog.tsx  Dropdown.tsx  EditChallenge.tsx  (+13 more)
(+83 files in other folders)
