[package]
name = "pail"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["mysql"] }
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }