[package]
name = "pail"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "pail"
path = "src/main.rs"

[dependencies]
diesel = { version = "2.0.2", features = ["postgres"] }
dotenvy = "0.15"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["json"]}
# Release version of rocket_sync_db_pools uses an old version of diesel that is incompatible with 2.0.2
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["diesel_postgres_pool"]}
serde = { version = "1.0.147", features = ["derive"] }
regex = "1.7.0"
rand = "0.8.5"
dotenv = "0.15.0"
